# HermesYoutubeCurator

./: .env.example  .gitignore  .python-version  AGENTS.md  INSTALL.md  README.md  pyproject.toml  setup.sh
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
deploy/: youtube-curator-collect.sh
ops/cron/: youtube-curator.cron
ops/systemd/: hermes-youtube-curator.service  hermes-youtube-curator.timer
scripts/: enrich_videos.py  launch_youtube_browser.py  launch_youtube_debug_browser.py  login_youtube_profile.py  morning_run.py  probe_youtube_api.py  refresh_history.py  refresh_home.py  run_curator.py  select_enrichment.py  setup_hermes_curator.sh  youtube_curator_refresh_for_hermes.sh
skills/youtube-curator/: SKILL.md
specs/: raw-spec.md
specs/001-youtube-curator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/hermes_youtube_curator/: __init__.py  models.py
tests/: conftest.py
tests/contract/: test_artifact_contracts.py  test_cli_contracts.py  test_delivery_contracts.py  test_enrichment_contracts.py
tests/fixtures/: enrichment.json  history.json  homepage.json
tests/integration/: test_home_collector.py  test_refresh_history.py
tests/unit/: __init__.py  test_cli_guards.py  test_curator_subagent_guard.py  test_enrich_videos.py  test_home_collector.py  test_launch_youtube_browser.py  test_morning_run.py  (+4 more)
(+34 files in other folders)
